[package]
name = "killercage"
version = "0.1.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2021"

[[bin]]
name = "killercage"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
once_cell = "1"
regex = "1"
rustyline = { version = "10", optional = true }
thiserror = "1"

[features]
default = ["cli"]
cli = ["dep:rustyline"]
