[package]
name = "killercage"
version = "0.2.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2021"

[[bin]]
name = "killercage"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4", features = ["cargo", "wrap_help"], optional = true }
once_cell = "1"
regex = "1"
rustyline = { version = "10", optional = true }
serif = { version = "0.1", optional = true }
thiserror = "1"
tracing = "0.1"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:rustyline", "dep:serif"]
