[package]
name = "killercage"
version = "0.2.2"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2021"

[[bin]]
name = "killercage"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4", features = ["cargo", "wrap_help"], optional = true }
regex = "1"
rustyline = { version = "12", default-features = false, optional = true }
serif = { version = "0.1.4", optional = true }
thiserror = "1.0.47"
tracing = "0.1"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:rustyline", "dep:serif"]
